--- a/skscope_result_new/plot.ipynb
+++ b/skscope_result_new/plot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -38,127 +38,62 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>model</th>\n",
-       "      <th>method</th>\n",
-       "      <th>ising</th>\n",
-       "      <th>linear</th>\n",
-       "      <th>logistic</th>\n",
-       "      <th>multitask</th>\n",
-       "      <th>non_linear</th>\n",
-       "      <th>trend_filter</th>\n",
+       "      <th></th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>0</th>\n",
+       "      <th>4</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>SCOPE</td>\n",
-       "      <td>1.0(0.01)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.94(0.04)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.77(0.09)</td>\n",
-       "      <td>0.79(0.19)</td>\n",
+       "      <th>model</th>\n",
+       "      <td>linear</td>\n",
+       "      <td>logistic</td>\n",
+       "      <td>ising</td>\n",
+       "      <td>non_linear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GraSP</td>\n",
-       "      <td>0.99(0.01)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.9(0.08)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.78(0.08)</td>\n",
-       "      <td>0.58(0.23)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>IHT</td>\n",
-       "      <td>0.95(0.05)</td>\n",
-       "      <td>0.79(0.04)</td>\n",
-       "      <td>0.97(0.03)</td>\n",
-       "      <td>0.97(0.02)</td>\n",
-       "      <td>0.78(0.09)</td>\n",
-       "      <td>0.08(0.1)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>HTP</td>\n",
-       "      <td>0.97(0.03)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.84(0.05)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.78(0.09)</td>\n",
-       "      <td>0.41(0.22)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>FoBa</td>\n",
-       "      <td>1.0(0.01)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.92(0.06)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.77(0.09)</td>\n",
-       "      <td>0.87(0.13)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>OMP</td>\n",
-       "      <td>0.98(0.03)</td>\n",
-       "      <td>1.0(0.01)</td>\n",
-       "      <td>0.91(0.05)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
-       "      <td>0.77(0.09)</td>\n",
-       "      <td>0.7(0.18)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>LASSO</td>\n",
-       "      <td>0.94(0.04)</td>\n",
+       "      <th>accuracy</th>\n",
        "      <td>0.83(0.17)</td>\n",
        "      <td>0.83(0.05)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
+       "      <td>0.94(0.04)</td>\n",
        "      <td>0.74(0.09)</td>\n",
-       "      <td>0.19(0.22)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time</th>\n",
+       "      <td>14.59(5.6)</td>\n",
+       "      <td>69.45(53.47)</td>\n",
+       "      <td>32.26(17.88)</td>\n",
+       "      <td>534.49(337.72)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "model method       ising      linear    logistic   multitask  non_linear  \\\n",
-       "6      SCOPE   1.0(0.01)    1.0(0.0)  0.94(0.04)    1.0(0.0)  0.77(0.09)   \n",
-       "1      GraSP  0.99(0.01)    1.0(0.0)   0.9(0.08)    1.0(0.0)  0.78(0.08)   \n",
-       "3        IHT  0.95(0.05)  0.79(0.04)  0.97(0.03)  0.97(0.02)  0.78(0.09)   \n",
-       "2        HTP  0.97(0.03)    1.0(0.0)  0.84(0.05)    1.0(0.0)  0.78(0.09)   \n",
-       "0       FoBa   1.0(0.01)    1.0(0.0)  0.92(0.06)    1.0(0.0)  0.77(0.09)   \n",
-       "5        OMP  0.98(0.03)   1.0(0.01)  0.91(0.05)    1.0(0.0)  0.77(0.09)   \n",
-       "4      LASSO  0.94(0.04)  0.83(0.17)  0.83(0.05)    1.0(0.0)  0.74(0.09)   \n",
-       "\n",
-       "model trend_filter  \n",
-       "6       0.79(0.19)  \n",
-       "1       0.58(0.23)  \n",
-       "3        0.08(0.1)  \n",
-       "2       0.41(0.22)  \n",
-       "0       0.87(0.13)  \n",
-       "5        0.7(0.18)  \n",
-       "4       0.19(0.22)  "
+       "                   1             2             0               4\n",
+       "model         linear      logistic         ising      non_linear\n",
+       "accuracy  0.83(0.17)    0.83(0.05)    0.94(0.04)      0.74(0.09)\n",
+       "time      14.59(5.6)  69.45(53.47)  32.26(17.88)  534.49(337.72)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"skscope_experiment-3.csv\")\n",
+    "df = pd.read_csv(\"skscope_experiment_lasso.csv\")\n",
     "\n",
-    "df.groupby(['method', 'model'])['accuracy'].apply(\n",
+    "df[df[\"method\"] == \"LASSO\"].groupby(\"model\")[[\"accuracy\", \"time\"]].agg(\n",
     "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
-    ").unstack().reset_index().iloc[[6,1,3,2,0,5,4]]"
+    ").reset_index().transpose().iloc[:, [1,2,0,4]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -185,8 +120,6 @@
        "      <th>method</th>\n",
        "      <th>linear</th>\n",
        "      <th>logistic</th>\n",
-       "      <th>trend_filter</th>\n",
-       "      <th>multitask</th>\n",
        "      <th>ising</th>\n",
        "      <th>non_linear</th>\n",
        "    </tr>\n",
@@ -197,8 +130,6 @@
        "      <td>OMP</td>\n",
        "      <td>1.0(0.01)</td>\n",
        "      <td>0.91(0.05)</td>\n",
-       "      <td>0.7(0.18)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
        "      <td>0.98(0.03)</td>\n",
        "      <td>0.77(0.09)</td>\n",
        "    </tr>\n",
@@ -207,8 +138,6 @@
        "      <td>IHT</td>\n",
        "      <td>0.79(0.04)</td>\n",
        "      <td>0.97(0.03)</td>\n",
-       "      <td>0.08(0.1)</td>\n",
-       "      <td>0.97(0.02)</td>\n",
        "      <td>0.95(0.05)</td>\n",
        "      <td>0.78(0.09)</td>\n",
        "    </tr>\n",
@@ -217,8 +146,6 @@
        "      <td>HTP</td>\n",
        "      <td>1.0(0.0)</td>\n",
        "      <td>0.84(0.05)</td>\n",
-       "      <td>0.4(0.22)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
        "      <td>0.97(0.03)</td>\n",
        "      <td>0.78(0.09)</td>\n",
        "    </tr>\n",
@@ -227,8 +154,6 @@
        "      <td>GraSP</td>\n",
        "      <td>1.0(0.0)</td>\n",
        "      <td>0.87(0.07)</td>\n",
-       "      <td>0.59(0.22)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
        "      <td>0.99(0.01)</td>\n",
        "      <td>0.78(0.08)</td>\n",
        "    </tr>\n",
@@ -237,8 +162,6 @@
        "      <td>FoBa</td>\n",
        "      <td>1.0(0.0)</td>\n",
        "      <td>0.92(0.06)</td>\n",
-       "      <td>0.87(0.13)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
        "      <td>1.0(0.01)</td>\n",
        "      <td>0.77(0.09)</td>\n",
        "    </tr>\n",
@@ -247,8 +170,6 @@
        "      <td>SCOPE</td>\n",
        "      <td>1.0(0.0)</td>\n",
        "      <td>0.94(0.04)</td>\n",
-       "      <td>0.79(0.19)</td>\n",
-       "      <td>1.0(0.0)</td>\n",
        "      <td>1.0(0.01)</td>\n",
        "      <td>0.77(0.09)</td>\n",
        "    </tr>\n",
@@ -257,24 +178,16 @@
        "</div>"
       ],
       "text/plain": [
-       "model method      linear    logistic trend_filter   multitask       ising  \\\n",
-       "4        OMP   1.0(0.01)  0.91(0.05)    0.7(0.18)    1.0(0.0)  0.98(0.03)   \n",
-       "3        IHT  0.79(0.04)  0.97(0.03)    0.08(0.1)  0.97(0.02)  0.95(0.05)   \n",
-       "2        HTP    1.0(0.0)  0.84(0.05)    0.4(0.22)    1.0(0.0)  0.97(0.03)   \n",
-       "1      GraSP    1.0(0.0)  0.87(0.07)   0.59(0.22)    1.0(0.0)  0.99(0.01)   \n",
-       "0       FoBa    1.0(0.0)  0.92(0.06)   0.87(0.13)    1.0(0.0)   1.0(0.01)   \n",
-       "5      SCOPE    1.0(0.0)  0.94(0.04)   0.79(0.19)    1.0(0.0)   1.0(0.01)   \n",
-       "\n",
-       "model  non_linear  \n",
-       "4      0.77(0.09)  \n",
-       "3      0.78(0.09)  \n",
-       "2      0.78(0.09)  \n",
-       "1      0.78(0.08)  \n",
-       "0      0.77(0.09)  \n",
-       "5      0.77(0.09)  "
+       "model method      linear    logistic       ising  non_linear\n",
+       "4        OMP   1.0(0.01)  0.91(0.05)  0.98(0.03)  0.77(0.09)\n",
+       "3        IHT  0.79(0.04)  0.97(0.03)  0.95(0.05)  0.78(0.09)\n",
+       "2        HTP    1.0(0.0)  0.84(0.05)  0.97(0.03)  0.78(0.09)\n",
+       "1      GraSP    1.0(0.0)  0.87(0.07)  0.99(0.01)  0.78(0.08)\n",
+       "0       FoBa    1.0(0.0)  0.92(0.06)   1.0(0.01)  0.77(0.09)\n",
+       "5      SCOPE    1.0(0.0)  0.94(0.04)   1.0(0.01)  0.77(0.09)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,34 +196,81 @@
     "df = pd.read_csv(\"skscope_experiment_jit.csv\")\n",
     "df[df.jit == True].groupby(['method', 'model'])['accuracy'].apply(\n",
     "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
-    ").unstack().reset_index().iloc[[4,3,2,1,0,5], [0,2,3,6,4,1,5]]"
+    ").unstack().reset_index().iloc[[4,3,2,1,0,5], [0,2,3,1,5]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model method trend_filter\n",
-      "5        OMP   0.67(0.19)\n",
-      "3        IHT    0.07(0.1)\n",
-      "2        HTP   0.39(0.24)\n",
-      "1      GraSP   0.64(0.23)\n",
-      "0       FoBa   0.89(0.13)\n",
-      "6      SCOPE   0.81(0.16)\n",
-      "4      LASSO    0.16(0.2)\n"
+      "      method     accuracy         time\n",
+      "model        trend_filter trend_filter\n",
+      "5        OMP   0.86(0.03)   1.77(0.57)\n",
+      "3        IHT    0.08(0.0)   0.76(0.28)\n",
+      "2        HTP   0.47(0.03)   0.71(0.23)\n",
+      "1      GraSP   0.78(0.12)   0.95(0.38)\n",
+      "0       FoBa     1.0(0.0)   8.27(1.66)\n",
+      "6      SCOPE   0.98(0.02)   4.73(1.13)\n",
+      "4      LASSO   0.21(0.04)  19.75(9.57)\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"skscope_experiment_trend_filter.csv\")\n",
-    "print(df.groupby(['method', 'model'])['accuracy'].apply(\n",
+    "print(df.groupby(['method', 'model'])[[\"accuracy\", \"time\"]].agg(\n",
     "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
     ").unstack().reset_index().iloc[[5,3,2,1,0,6,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                0              1           2              3\n",
+      "model      linear         linear  non_linear     non_linear\n",
+      "level_1  accuracy           time    accuracy           time\n",
+      "0        1.0(0.0)  1009.94(0.66)  0.79(0.08)  1003.88(1.53)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"gurobi_experiment-1.csv\")\n",
+    "print(df.groupby(['model'])[[\"accuracy\", \"time\"]].agg(\n",
+    "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
+    ").stack().reset_index().transpose())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                    0              1\n",
+      "model    trend_filter   trend_filter\n",
+      "level_1      accuracy           time\n",
+      "0            1.0(0.0)  1013.16(0.62)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"gurobi_experiment-trend_filter.csv\")\n",
+    "print(df.groupby(['model'])[[\"accuracy\", \"time\"]].agg(\n",
+    "    lambda x: str(x.mean().round(2)) + \"(\" + str(x.std().round(2)) + \")\"\n",
+    ").stack().reset_index().transpose())"
    ]
   },
   {
